--- a/MainPage/Templates/template2.html
+++ b/MainPage/Templates/template2.html
@@ -21,21 +21,18 @@
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a class="nav-link" href="Login.html">Login</a>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="Login.html"><strong>Login </strong></a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item dropdown active">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Template
+                        <strong>Template</strong>
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="../Templates/template1.html">Type 1</a>
                         <a class="dropdown-item" href="../Templates/template2.html">Type 2</a>
                         <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
                       </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -46,7 +43,7 @@
               </nav>
               
     <div class="headlinesContainer">
-        <h2>Most Recent Headline:</h2>
+        <h2>Most Recent Headline: </h2>
     </div>   
 
     <div class="mainArticle">
