--- a/MainPage/Templates/Login.html
+++ b/MainPage/Templates/Login.html
@@ -21,11 +21,11 @@
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                      <a class="nav-link" href="template1.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Login</a>
+                      <a class="nav-link" href="Login.html">Login</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,9 +36,6 @@
                         <a class="dropdown-item" href="../Templates/template2.html">Type 2</a>
                         <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
                       </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                     </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -69,7 +66,7 @@
                   <button type="submit" class="btn btn-primary">Sign in</button>
                 </form>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">New around here? Sign up</a>
+                <a class="dropdown-item" href="createAccount.html">New around here? Sign up</a>
                 <a class="dropdown-item" href="#">Forgot password?</a>
               </div>
 
