--- a/MainPage/Templates/Login.html
+++ b/MainPage/Templates/Login.html
@@ -49,7 +49,7 @@
                 <form class="px-4 py-3">
                   <div class="form-group">
                     <label for="exampleDropdownFormEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                    <input type="text" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
                   </div>
                   <div class="form-group">
                     <label for="exampleDropdownFormPassword1">Password</label>
