--- a/MainPage/Templates/adminTemplate1.html
+++ b/MainPage/Templates/adminTemplate1.html
@@ -64,15 +64,18 @@
            <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+               <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
           </div>
       </div>
       </div>
       <div class="empty">
         <div class="fill card" draggable="true">
+            <img src="" class="card-img-top" draggable="false">
         <div class="card-body">
           <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
           <h6 class="card-subtitle mb-2 text-muted">Date</h6>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
       </div>
       </div>
       </div>
@@ -83,6 +86,7 @@
                               <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                             </div>
                         </div>
       </div>
@@ -94,6 +98,7 @@
                                   <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                   <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                 </div>
                             </div>
                         </div>
@@ -105,6 +110,7 @@
                                       <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                       <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                     </div>
                                 </div>
                         </div>
@@ -115,6 +121,7 @@
                                       <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                       <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                     </div>
                                 </div>
                         </div>
@@ -125,6 +132,7 @@
                                           <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                           <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                         </div>
                                     </div>
                                   </div>
@@ -135,6 +143,7 @@
                                               <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                             </div>
                                         </div>
                                       </div>
@@ -145,6 +154,7 @@
                                                   <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                                   <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                  <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                                 </div>
                                             </div>
                                             </div>
