--- a/MainPage/Templates/createAccount.html
+++ b/MainPage/Templates/createAccount.html
@@ -64,7 +64,7 @@
                     <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
                   </div>
                   <div class="form-group">
-                        <label for="exampleDropdownFormPassword1">Newspaper Permition Password</label>
+                        <label for="exampleDropdownFormPassword1">Newspaper Permission Password</label>
                         <input type="password" class="form-control" id="exampleDropdownNewspaper1" placeholder="Password">
                         <div class="dropdown">
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -93,7 +93,7 @@
                   </div>
                   <div class="form-group">
                     <label for="exampleDropdownFormEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                    <input type="text" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
                   </div>
                   <div class="form-group">
                     <label for="exampleDropdownFormPassword1">Password</label>
