--- a/MainPage/Templates/template1.html
+++ b/MainPage/Templates/template1.html
@@ -59,6 +59,7 @@
       </div>
       <div class="empty">
         <div class="fill card" draggable="true">
+            <img src="" class="card-img-top" draggable="false">
         <div class="card-body">
           <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
           <h6 class="card-subtitle mb-2 text-muted">Date</h6>
