--- a/MainPage/Templates/adminTemplate2.html
+++ b/MainPage/Templates/adminTemplate2.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="format2.css">
-    <link rel="stylesheet" href="modal.css">
 
     <title>News Project</title>
   </head>
@@ -53,82 +52,90 @@
     
     <div class="arts">
             <div class="empty big-boy">
-                    <div class="fill card">
-                    <img src="gotem.jpg" class="card-img-top" alt="Should've gotten you">
+                    <div class="fill card" draggable="true">
+                    <img src="gotem.jpg" class="card-img-top" alt="Should've gotten you" draggable="false">
                     <div class="card-body">
                       <h5 class="card-title"> <a href="google.com">Subtitle for biggest headline</a> </h5>
                       <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                     </div>
                 </div>
                 </div>
                 <div class="empty basic">
-                <div class="fill card">
+                <div class="fill card" draggable="true">
                     <img src="" class="card-img-top" draggable="false">
                         <div class="card-body">
                           <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                           <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                         </div>
                     </div>
                 </div>
                 <div class="empty basic">
-                    <div class="fill card">
+                    <div class="fill card" draggable="true">
                         <img src="" class="card-img-top" draggable="false">
                             <div class="card-body">
                               <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                              <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                             </div>
                         </div>
                 </div>
                 <div class="empty basic">
-                        <div class="fill card">
+                        <div class="fill card" draggable="true">
                             <img src="" class="card-img-top" draggable="false">
                                 <div class="card-body">
                                   <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                   <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                 </div>
                             </div>
                 </div>
                             <div class="empty small-boy">
-                            <div class="fill card">
+                            <div class="fill card" draggable="true">
                                 <img src="" class="card-img-top" draggable="false">
                                     <div class="card-body">
                                       <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                       <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                      <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                     </div>
                                 </div>
                             </div>
                             <div class="empty small-boy">
-                                    <div class="fill card">
+                                    <div class="fill card" draggable="true">
                                         <img src="" class="card-img-top" draggable="false">
                                             <div class="card-body">
                                               <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                              <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="empty small-boy">
-                                            <div class="fill card">
+                                            <div class="fill card" draggable="true">
                                                 <img src="" class="card-img-top" draggable="false">
                                                     <div class="card-body">
                                                       <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                                       <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                      <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="empty small-boy">
-                                                    <div class="fill card">
+                                                    <div class="fill card" draggable="true">
                                                         <img src="" class="card-img-top" draggable="false">
                                                             <div class="card-body">
                                                               <h5 class="card-title"> <a href="google.com">Card title</a> </h5>
                                                               <h6 class="card-subtitle mb-2 text-muted">Date</h6>
                                                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                              <button class="btn-light btn-custom invisible"> <strong> Delete </strong></button>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -144,7 +151,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="modalDisplay.js"></script>
+    <script src="dragAndDropSystem.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
