--- a/MainPage/Templates/format2.css
+++ b/MainPage/Templates/format2.css
@@ -37,25 +37,34 @@ a{
 }
 
 .card{
-    margin-bottom: 4%;
     width: 100%;
     height: 100%;
+}
+
+.basic{
     grid-column: span 2;
     grid-row: span 4;
 }
 
 .small-boy{
-    margin-bottom: 4%;
-    width: 100%;
-    height: 100%;
     grid-column: span 1;
     grid-row: span 2;
 }
 
 .big-boy{
-    margin-bottom: 4%;
-    width: 100%;
-    height: 100%;
+
     grid-column: 3/ span 4;
     grid-row:1/span 8;
+}
+
+.hold {
+    border: solid 5px #ccc;
+  }
+
+.hovered {
+    border: dashed 10px black;
+}
+
+.btn-custom {
+    border: solid 5px red;
 }
