--- a/MainPage/Templates/Login.html
+++ b/MainPage/Templates/Login.html
@@ -27,24 +27,20 @@
                     <li class="nav-item">
                       <a class="nav-link" href="Login.html">Login</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Template
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="../Templates/template1.html">Type 1</a>
-                        <a class="dropdown-item" href="../Templates/template2.html">Type 2</a>
-                        <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
-                      </div>
-                    </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  <div class="dropdown btn-group dropleft">
+                      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Select Newspaper To View Here
+                      </button>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">News4U</a>
+                          <a class="dropdown-item" href="#">Washing Post</a>
+                          <a class="dropdown-item" href="#">Generic News Paper</a>
+                      </div>
+                    </div>
                 </div>
               </nav>
-    
+    <div class="content">
               <div class="Login">
                 <form class="px-4 py-3">
                   <div class="form-group">
@@ -67,9 +63,19 @@
                 </form>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="createAccount.html">New around here? Sign up</a>
-                <a class="dropdown-item" href="#">Forgot password?</a>
               </div>
 
+              <div class="newsSelect">
+                  <button class="btn-dark btn-lg dropdown-toggle newsDrop" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Select Newspaper To View Here:
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">News4U</a>
+                      <a class="dropdown-item" href="#">Washing Post</a>
+                      <a class="dropdown-item" href="#">Generic News Paper</a>
+                  </div>
+              </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
