--- a/MainPage/Templates/adminTemplate3.html
+++ b/MainPage/Templates/adminTemplate3.html
@@ -37,11 +37,22 @@
                         <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
                       </div>
                     </li>
+                    <li>
+                        <a class="btn btn-light" href="#" role="button">
+                          Create An Article
+                        </a>
+                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  <div class="dropdown btn-group dropleft">
+                      <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Directions for reformating
+                      </button>
+                      <div class="dropdown-menu">
+                        <p class="dropdown-item">Drag and drop articles on this page to move them around.</p>
+                        <p class="dropdown-item">When an article is dropped, it will replace the article currently in that position.</p>
+                        <p class="dropdown-item">These changes will be reflected onto the associated page for you newspaper.</p>
+                      </div>
+                    </div>
                 </div>
               </nav>
               
