--- a/MainPage/Templates/template2.html
+++ b/MainPage/Templates/template2.html
@@ -36,10 +36,16 @@
                       </div>
                     </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  <div class="dropdown btn-group">
+                      <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <strong> Select Newspaper To View Here </strong>
+                      </a>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">News4U</a>
+                          <a class="dropdown-item" href="#">Washing Post</a>
+                          <a class="dropdown-item" href="#">Generic News Paper</a>
+                      </div>
+                    </div>
                 </div>
               </nav>
               
