--- a/MainPage/Templates/adminTemplate2.html
+++ b/MainPage/Templates/adminTemplate2.html
@@ -34,11 +34,22 @@
                         <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
                       </div>
                     </li>
+                    <li>
+                        <a class="btn btn-light createArt" href="#" role="button">
+                          Create An Article
+                        </a>
+                      </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  <div class="dropdown btn-group">
+                      <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          <strong> Select Newspaper To View Here </strong>
+                      </a>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">News4U</a>
+                          <a class="dropdown-item" href="#">Washing Post</a>
+                          <a class="dropdown-item" href="#">Generic News Paper</a>
+                      </div>
+                    </div>
                 </div>
               </nav>
               
@@ -47,7 +58,7 @@
     </div>   
 
     <div class="mainArticle">
-        <a class="headlineText" href="#"> <h1>Biggest Headline</h1> </a>
+        <h1 class="headlineText">Biggest Headline</h1>
     </div>
     
     <div class="arts">
