--- a/MainPage/Templates/template3.html
+++ b/MainPage/Templates/template3.html
@@ -38,14 +38,17 @@
                         <a class="dropdown-item" href="../Templates/template3.html">Type 3</a>
                       </div>
                     </li>
-                    <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                  </form>
+                  <div class="dropdown btn-group dropleft">
+                      <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Select Newspaper To View Here
+                      </button>
+                      <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">News4U</a>
+                          <a class="dropdown-item" href="#">Washing Post</a>
+                          <a class="dropdown-item" href="#">Generic News Paper</a>
+                      </div>
+                    </div>
                 </div>
               </nav>
               
