--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,14 +49,14 @@
               </nav>
     
               <div class="Login">
-                <form class="px-4 py-3">
+                <form class="px-4 py-3" action="/login" method="POST">
                   <div class="form-group">
                     <label for="exampleDropdownFormEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="email@example.com">
+                    <input type="text" class="form-control" name="user" placeholder="email@example.com" enctype='application/x-www-form-urlencoded'>
                   </div>
                   <div class="form-group">
                     <label for="exampleDropdownFormPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Password">
+                    <input type="password" class="form-control" name="password" placeholder="Password" enctype='application/x-www-form-urlencoded'">
                   </div>
                   <div class="form-group">
                     <div class="form-check">
@@ -72,7 +72,6 @@
                 <a class="dropdown-item" href="#">New around here? Sign up</a>
                 <a class="dropdown-item" href="#">Forgot password?</a>
               </div>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
